CS list qna 완료, faq 수정중